# cross-platform-template

./: CMakeLists.txt  README.md
src/: main.cpp
